nav component communicating with app and console

--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -1,3 +1,9 @@
-<p>
-  navbar works!
-</p>
+<nav>
+  <ul>
+    <li (click)="setCodeSelection('js')">JavaScript</li>
+    <li (click)="setCodeSelection('ts')">TypeScript</li>
+    <li (click)="setCodeSelection('css')">CSS</li>
+    <li (click)="setCodeSelection('sass')">Sass</li>
+    <li (click)="setCodeSelection('html')">HTML</li>
+  </ul>
+</nav>
