--- a/src/app/Components/console/console.component.html
+++ b/src/app/Components/console/console.component.html
@@ -1,3 +1,10 @@
 <p>
   console works!
 </p>
+<div style="margin-left: 50px">
+  <app-css-sandbox *ngIf="codeModule == 'css'"></app-css-sandbox>
+  <app-sass-sandbox *ngIf="codeModule == 'sass'"></app-sass-sandbox>
+  <app-html-sandbox *ngIf="codeModule == 'html'"></app-html-sandbox>
+  <app-javascript-sandbox *ngIf="codeModule == 'js'"></app-javascript-sandbox>
+  <app-typescript-sandbox *ngIf="codeModule == 'ts'"></app-typescript-sandbox>
+</div>
