--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<h1>
-  {{title}}
-</h1>
+<app-navbar (onModuleSelected)="onModuleSelected($event)"></app-navbar>
+<app-console [codeModule]="selectedModule"></app-console>
+<app-selection-controls></app-selection-controls>
+<app-sidebar></app-sidebar>
