Setting up service theme variables as observables. Integrating.

--- a/src/app/Components/selection-controls/selection-controls.component.html
+++ b/src/app/Components/selection-controls/selection-controls.component.html
@@ -1,4 +1,5 @@
 <p>
   selection-controls works!
 </p>
-<button type="button" (click)="setColor()">Set Color Scheme</button>
+<button type="button" (click)="setColor('background', 'CCC')">Set Color Scheme</button>
+<pre>{{theme | json}}</pre>
