--- a/src/app/Components/console/console.component.html
+++ b/src/app/Components/console/console.component.html
@@ -1,9 +1,14 @@
 <p>
   console works!
 </p>
-<div class="code-module-container">
-  <app-code-module  [codeModule]="codeModule" [theme]="theme"></app-code-module>
-  <pre>
-    {{theme | json}}
-  </pre>
+<div>
+  <!--<app-code-module  [codeModule]="codeModule" [theme]="theme"></app-code-module>-->
+  <!--<app-css-sandbox *ngIf="codeModule == 'css'"></app-css-sandbox>-->
+  <!--<app-sass-sandbox *ngIf="codeModule == 'sass'"></app-sass-sandbox>-->
+  <!--<app-html-sandbox *ngIf="codeModule == 'html'"></app-html-sandbox>-->
+  <app-javascript-sandbox *ngIf="codeModule == 'js'" [theme]="theme"></app-javascript-sandbox>
+  <app-typescript-sandbox *ngIf="codeModule == 'ts'"  [theme]="theme"></app-typescript-sandbox>
+  <!--<pre>-->
+    <!--{{theme | json}}-->
+  <!--</pre>-->
 </div>
