--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,12 @@ body {
   margin: 0;
   width: 100%;
 }
+.code-module {
+  font-family: Menlo;
+  width: 100%;
+  padding: 50px;
+}
+.indent {
+  display: block;
+  padding-left: 30px;
+}
