--- a/src/app/Components/selection-controls/selection-controls.component.scss
+++ b/src/app/Components/selection-controls/selection-controls.component.scss
@@ -1,3 +1,8 @@
+.selection-controls-container {
+  background-color: #ccc;
+  padding: 20px;
+}
+
 input.ng-invalid {
   outline: none;
   border-color: tomato;
