Adding more identifiers to js html, removing label color edit

--- a/src/app/Components/selection-controls/javascript-controls/javascript-controls.component.html
+++ b/src/app/Components/selection-controls/javascript-controls/javascript-controls.component.html
@@ -88,10 +88,10 @@
       <label for="operation">Operation</label>
       <input type="text" name="operation" id="operation" [(ngModel)]="theme.operation">
     </div>
-    <div class="color-input-container">
-      <label for="label">Label</label>
-      <input type="text" name="label" id="label" [(ngModel)]="theme.label">
-    </div>
+    <!--<div class="color-input-container">-->
+      <!--<label for="label">Label</label>-->
+      <!--<input type="text" name="label" id="label" [(ngModel)]="theme.label">-->
+    <!--</div>-->
   </section>
 
   <h2><span class="accordion-toggle" (click)="hideFunctions = !hideFunctions">{{!hideFunctions ? 'hide' : 'show'}}</span>Function Colors {{!hideFunctions ? '' : '...'}}</h2>
