--- a/src/app/Components/console/typescript-sandbox/typescript-sandbox.component.html
+++ b/src/app/Components/console/typescript-sandbox/typescript-sandbox.component.html
@@ -37,40 +37,53 @@
 <span [ngStyle]="{'color': '#' + theme.keyword}">export</span> <span [ngStyle]="{'color': '#' + theme.keyword}">interface</span> <span [ngStyle]="{'color': '#' + theme.interfaceName}">HasValidator</span><span [ngStyle]="{'color': '#' + theme.operation}"><</span><span [ngStyle]="{'color': '#' + theme.typeParameter}">T</span><span [ngStyle]="{'color': '#' + theme.operation}">></span> <span [ngStyle]="{'color': '#' + theme.braces}">{{ '{' }}</span> <br>
 <span class="indent"><span [ngStyle]="{'color': '#' + theme.instanceMemberFunction}">validateValue</span><span [ngStyle]="{'color': '#' + theme.parenthesis}">()</span><span [ngStyle]="{'color': '#' + theme.operation}">:</span><span [ngStyle]="{'color': '#' + theme.interfaceName}">Boolean</span><span [ngStyle]="{'color': '#' + theme.semicolon}">;</span></span>
   <span [ngStyle]="{'color': '#' + theme.braces}">{{ '}' }}</span> <br>
-
-  <span [ngStyle]="{'color': '#' + theme.keyword}">class</span> <span [ngStyle]="{'color': '#' + theme.className}">HasValidator</span> <span [ngStyle]="{'color': '#' + theme.keyword}">implements</span> <span [ngStyle]="{'color': '#' + theme.interfaceName}">HasValidator</span><span [ngStyle]="{'color': '#' + theme.operation}"><</span><span [ngStyle]="{'color': '#' + theme.interfacename}">String</span><span [ngStyle]="{'color': '#' + theme.operation}">></span> <span [ngStyle]="{'color': '#' + theme.braces}">{{ '{' }}</span>
+<p>
+  <span [ngStyle]="{'color': '#' + theme.keyword}">class</span> <span [ngStyle]="{'color': '#' + theme.className}">HasValidator</span> <span [ngStyle]="{'color': '#' + theme.keyword}">implements</span> <span [ngStyle]="{'color': '#' + theme.interfaceName}">HasValidator</span><span [ngStyle]="{'color': '#' + theme.operation}"><</span><span [ngStyle]="{'color': '#' + theme.interfaceName}">String</span><span [ngStyle]="{'color': '#' + theme.operation}">></span> <span [ngStyle]="{'color': '#' + theme.braces}">{{ '{' }}</span>
   <span class="indent">
   <span [ngStyle]="{'color': '#' + theme.blockComment}">/* Processed values */</span> <br>
-  <span [ngStyle]="{'color': '#' + theme.keyword}">static</span> <span [ngStyle]="{'color': '#' + theme.staticMemberVariable}">validatedValue</span><span [ngStyle]="{'color': '#' + theme.operation}">:</span><span [ngStyle]="{'color': '#' + theme.interfacename}">Array</span><span [ngStyle]="{'color': '#' + theme.operation}"><</span><span [ngStyle]="{'color': '#' + theme.interfaceName}">String</span><span [ngStyle]="{'color': '#' + theme.operation}">></span> <span [ngStyle]="{'color': '#' + theme.braces}">{{ '{' }}</span> <span [ngStyle]="{'color': '#' + theme.operation}">=</span> <span [ngStyle]="{'color': '#' + theme.brackets}">[</span><span [ngStyle]="{'color': '#' + theme.string}">""</span><span [ngStyle]="{'color': '#' + theme.comma}">,</span> <span [ngStyle]="{'color': '#' + theme.string}">"aa"</span><span [ngStyle]="{'color': '#' + theme.brackets}">]</span><span [ngStyle]="{'color': '#' + theme.semicolon}">;</span> <br>
+  <span [ngStyle]="{'color': '#' + theme.keyword}">static</span> <span [ngStyle]="{'color': '#' + theme.staticMemberVariable}">validatedValue</span><span [ngStyle]="{'color': '#' + theme.operation}">:</span><span [ngStyle]="{'color': '#' + theme.interfaceName}">Array</span><span [ngStyle]="{'color': '#' + theme.operation}"><</span><span [ngStyle]="{'color': '#' + theme.interfaceName}">String</span><span [ngStyle]="{'color': '#' + theme.operation}">></span> <span [ngStyle]="{'color': '#' + theme.braces}">{{ '{' }}</span> <span [ngStyle]="{'color': '#' + theme.operation}">=</span> <span [ngStyle]="{'color': '#' + theme.brackets}">[</span><span [ngStyle]="{'color': '#' + theme.string}">""</span><span [ngStyle]="{'color': '#' + theme.comma}">,</span> <span [ngStyle]="{'color': '#' + theme.string}">"aa"</span><span [ngStyle]="{'color': '#' + theme.brackets}">]</span><span [ngStyle]="{'color': '#' + theme.semicolon}">;</span> <br>
   <span [ngStyle]="{'color': '#' + theme.keyword}">private</span> <span [ngStyle]="{'color': '#' + theme.instanceMemberVariable}">myValue</span><span [ngStyle]="{'color': '#' + theme.operation}">:</span><span [ngStyle]="{'color': '#' + theme.interfaceName}">String</span><span [ngStyle]="{'color': '#' + theme.semicolon}">;</span> <br>
-
+<p>
+  <span [ngStyle]="{'color': '#' + theme.docComment}">
       /** <br>
-      * Constructor for <code>HasValidator</code> class <br>
-      * @param value for <i>validation</i> <br>
-      */ <br>
-      constructor(valueParameter:String) <span [ngStyle]="{'color': '#' + theme.braces}">{{ '{' }}</span> <br>
-      this.myValue = valueParameter; <br>
-      <span [ngStyle]="{'color': '#' + theme.className}">HasValidator</span>.validatedValue.push(value); <br>
-      <span [ngStyle]="{'color': '#' + theme.braces}">{{ '}' }}</span> <br>
-
-      public validateValue():Boolean <span [ngStyle]="{'color': '#' + theme.braces}">{{ '{' }}</span> <br>
-      var resultValue:Boolean = checkChars(this.myValue); <br>
-      return resultValue; <br>
-      <span [ngStyle]="{'color': '#' + theme.braces}">{{ '}' }}</span> <br>
-
-      static createInstance(valueParameter:String):<span [ngStyle]="{'color': '#' + theme.className}">HasValidator</span> <span [ngStyle]="{'color': '#' + theme.braces}">{{ '{' }}</span> <br>
-      return new <span [ngStyle]="{'color': '#' + theme.className}">HasValidator</span>(valueParameter); <br>
-      <span [ngStyle]="{'color': '#' + theme.braces}">{{ '}' }}</span> <br>
+      * Constructor for <span [ngStyle]="{'color': '#' + theme.className}">HasValidator</span> class <br>
+      * <span [ngStyle]="{'color': '#' + theme.docTag}">@param</span> value for <i>validation</i> <br>
+      */<br>
+</span>
+    <span [ngStyle]="{'color': '#' + theme.defaultText}">constructor</span><span [ngStyle]="{'color': '#' + theme.parenthesis}">(</span><span [ngStyle]="{'color': '#' + theme.parameter}">valueParameter</span><span [ngStyle]="{'color': '#' + theme.operation}">:</span><span [ngStyle]="{'color': '#' + theme.interfaceName}">String</span><span [ngStyle]="{'color': '#' + theme.parenthesis}">)</span> <span [ngStyle]="{'color': '#' + theme.braces}">{{ '{' }}</span>
+    <span class="indent">
+    <span [ngStyle]="{'color': '#' + theme.keyword}">this</span><span [ngStyle]="{'color': '#' + theme.dot}">.</span><span [ngStyle]="{'color': '#' + theme.instanceMemberVariable}">myValue</span> <span [ngStyle]="{'color': '#' + theme.operation}">=</span> <span [ngStyle]="{'color': '#' + theme.parameter}">valueParameter</span><span [ngStyle]="{'color': '#' + theme.semicolon}">;</span> <br>
+    <span [ngStyle]="{'color': '#' + theme.className}">HasValidator</span><span [ngStyle]="{'color': '#' + theme.dot}">.</span><span [ngStyle]="{'color': '#' + theme.staticMemberVariable}">validatedValue</span><span [ngStyle]="{'color': '#' + theme.dot}">.</span><span [ngStyle]="{'color': '#' + theme.globalFunction}">push</span><span [ngStyle]="{'color': '#' + theme.parenthesis}">(</span><span [ngStyle]="{'color': '#' + theme.defaultText}">value</span><span [ngStyle]="{'color': '#' + theme.parenthesis}">)</span><span [ngStyle]="{'color': '#' + theme.semicolon}">;</span>
   </span>
       <span [ngStyle]="{'color': '#' + theme.braces}">{{ '}' }}</span> <br>
-
-      function globalFunction<span [ngStyle]="{'color': '#' + theme.operation}"><</span><span [ngStyle]="{'color': '#' + theme.typeParameter}">TypeParameter</span><span [ngStyle]="{'color': '#' + theme.operation}">></span>(value:TypeParameter) <span [ngStyle]="{'color': '#' + theme.braces}">{{ '{' }}</span> //global function <br>
-        return 42; <br>
+</p>
+  <p>
+  <span [ngStyle]="{'color': '#' + theme.keyword}">public</span> <span [ngStyle]="{'color': '#' + theme.instanceMemberFunction}">validateValue</span><span [ngStyle]="{'color': '#' + theme.parenthesis}">()</span><span [ngStyle]="{'color': '#' + theme.operation}">:</span><span [ngStyle]="{'color': '#' + theme.interfaceName}">Boolean</span> <span [ngStyle]="{'color': '#' + theme.braces}">{{ '{' }}</span>
+  <span class="indent">
+  <span [ngStyle]="{'color': '#' + theme.keyword}">var</span> <span [ngStyle]="{'color': '#' + theme.localVariable}">resultValue</span><span [ngStyle]="{'color': '#' + theme.operation}">:</span><span [ngStyle]="{'color': '#' + theme.interfaceName}">Boolean</span> <span [ngStyle]="{'color': '#' + theme.operation}">=</span> <span [ngStyle]="{'color': '#' + theme.defaultText}">checkChars</span><span [ngStyle]="{'color': '#' + theme.parenthesis}">(</span><span [ngStyle]="{'color': '#' + theme.keyword}">this</span><span [ngStyle]="{'color': '#' + theme.dot}">.</span><span [ngStyle]="{'color': '#' + theme.instanceMemberVariable}">myValue</span><span [ngStyle]="{'color': '#' + theme.parenthesis}">)</span><span [ngStyle]="{'color': '#' + theme.semicolon}">;</span> <br>
+  <span [ngStyle]="{'color': '#' + theme.keyword}">return</span> <span [ngStyle]="{'color': '#' + theme.localVariable}">resultValue</span><span [ngStyle]="{'color': '#' + theme.semicolon}">;</span>
+  </span>
+      <span [ngStyle]="{'color': '#' + theme.braces}">{{ '}' }}</span> <br>
+</p>
+  <p>
+    <span [ngStyle]="{'color': '#' + theme.keyword}">static</span> <span [ngStyle]="{'color': '#' + theme.staticMemberFunction}">createInstance</span><span [ngStyle]="{'color': '#' + theme.parenthesis}">(</span><span [ngStyle]="{'color': '#' + theme.parameter}">valueParameter</span><span [ngStyle]="{'color': '#' + theme.operation}">:</span><span [ngStyle]="{'color': '#' + theme.interfaceName}">String</span><span [ngStyle]="{'color': '#' + theme.parenthesis}">)</span><span [ngStyle]="{'color': '#' + theme.operation}">:</span><span [ngStyle]="{'color': '#' + theme.className}">HasValidator</span> <span [ngStyle]="{'color': '#' + theme.braces}">{{ '{' }}</span>
+  <span class="indent">
+      <span [ngStyle]="{'color': '#' + theme.keyword}">return new</span> <span [ngStyle]="{'color': '#' + theme.className}">HasValidator</span><span [ngStyle]="{'color': '#' + theme.parenthesis}">(</span><span [ngStyle]="{'color': '#' + theme.parameter}">valueParameter</span><span [ngStyle]="{'color': '#' + theme.parenthesis}">)</span><span [ngStyle]="{'color': '#' + theme.semicolon}">;</span>
+  </span>
+      <span [ngStyle]="{'color': '#' + theme.braces}">{{ '}' }}</span> <br>
+  </p>
+  </span>
+      <span [ngStyle]="{'color': '#' + theme.braces}">{{ '}' }}</span> <br>
+  </p>
+  <span [ngStyle]="{'color': '#' + theme.keyword}">function</span> <span [ngStyle]="{'color': '#' + theme.globalFunction}">globalFunction</span><span [ngStyle]="{'color': '#' + theme.operation}"><</span><span [ngStyle]="{'color': '#' + theme.typeParameter}">TypeParameter</span><span [ngStyle]="{'color': '#' + theme.operation}">></span><span [ngStyle]="{'color': '#' + theme.parenthesis}">(</span><span [ngStyle]="{'color': '#' + theme.defaultText}">value</span><span [ngStyle]="{'color': '#' + theme.operation}">:</span><span [ngStyle]="{'color': '#' + theme.typeParameter}">TypeParameter</span><span [ngStyle]="{'color': '#' + theme.parenthesis}">)</span> <span [ngStyle]="{'color': '#' + theme.braces}">{{ '{' }}</span> <span [ngStyle]="{'color': '#' + theme.lineComment}">//global function</span>
+  <span class="indent">
+  <span [ngStyle]="{'color': '#' + theme.keyword}">return</span> <span [ngStyle]="{'color': '#' + theme.number}">42</span><span [ngStyle]="{'color': '#' + theme.semicolon}">;</span>
+  </span>
         <span [ngStyle]="{'color': '#' + theme.braces}">{{ '}' }}</span> <br>
-        declare var declareUrl; <br>
-        var varUrl = declareUrl.replace(/^\s*(.*)/, "$1").concat("\u1111\z\n\u22"); <br>
-        var hello = () => console.log("hello"); <br>
-        <span [ngStyle]="{'color': '#' + theme.className}">HasValidator</span>.createInstance(varUrl).validateValue(); <br>
+  <span [ngStyle]="{'color': '#' + theme.keyword}">declare var</span> <span [ngStyle]="{'color': '#' + theme.globalVariable}">declareUrl</span><span [ngStyle]="{'color': '#' + theme.semicolon}">;</span> <br>
+  <span [ngStyle]="{'color': '#' + theme.keyword}">var</span> <span [ngStyle]="{'color': '#' + theme.globalVariable}">varUrl</span> <span [ngStyle]="{'color': '#' + theme.operation}">=</span> <span [ngStyle]="{'color': '#' + theme.globalVariable}">declareUrl</span><span [ngStyle]="{'color': '#' + theme.dot}">.</span><span [ngStyle]="{'color': '#' + theme.globalFunction}">replace</span><span [ngStyle]="{'color': '#' + theme.parenthesis}">(</span><span [ngStyle]="{'color': '#' + theme.regex}">/^\s*(.*)/</span><span [ngStyle]="{'color': '#' + theme.comma}">,</span> <span [ngStyle]="{'color': '#' + theme.string}">"$1"</span><span [ngStyle]="{'color': '#' + theme.parenthesis}">)</span><span [ngStyle]="{'color': '#' + theme.dot}">.</span><span [ngStyle]="{'color': '#' + theme.globalFunction}">concat</span><span [ngStyle]="{'color': '#' + theme.parenthesis}">(</span><span [ngStyle]="{'color': '#' + theme.string}">"</span><span [ngStyle]="{'color': '#' + theme.validStringEscape}">\u1111\z\n</span><span [ngStyle]="{'color': '#' + theme.invalidStringEscape}">\u11</span><span [ngStyle]="{'color': '#' + theme.string}">"</span><span [ngStyle]="{'color': '#' + theme.parenthesis}">)</span><span [ngStyle]="{'color': '#' + theme.semicolon}">;</span> <br>
+  <span [ngStyle]="{'color': '#' + theme.keyword}">var</span> <span [ngStyle]="{'color': '#' + theme.localVariable}">hello</span> <span [ngStyle]="{'color': '#' + theme.operation}">=</span> <span [ngStyle]="{'color': '#' + theme.parenthesis}">()</span> <span [ngStyle]="{'color': '#' + theme.arrowFunction}">=></span> <span [ngStyle]="{'color': '#' + theme.defaultText}">console</span><span [ngStyle]="{'color': '#' + theme.dot}">.</span><span [ngStyle]="{'color': '#' + theme.instanceMemberFunction}">log</span><span [ngStyle]="{'color': '#' + theme.parenthesis}">(</span><span [ngStyle]="{'color': '#' + theme.string}">"hello"</span><span [ngStyle]="{'color': '#' + theme.parenthesis}">)</span><span [ngStyle]="{'color': '#' + theme.semicolon}">;</span> <br>
+  <span [ngStyle]="{'color': '#' + theme.className}">HasValidator</span><span [ngStyle]="{'color': '#' + theme.dot}">.</span><span [ngStyle]="{'color': '#' + theme.staticMemberFunction}">createInstance</span><span [ngStyle]="{'color': '#' + theme.parenthesis}">(</span><span [ngStyle]="{'color': '#' + theme.globalVariable}">varUrl</span><span [ngStyle]="{'color': '#' + theme.parenthesis}">)</span><span [ngStyle]="{'color': '#' + theme.dot}">.</span><span [ngStyle]="{'color': '#' + theme.instanceMemberFunction}">validateValue</span><span [ngStyle]="{'color': '#' + theme.parenthesis}">()</span><span [ngStyle]="{'color': '#' + theme.semicolon}">;</span> <br>
 </span>
         <span [ngStyle]="{'color': '#' + theme.braces}">{{ '}' }}</span> <br>
   <span [ngStyle]="{'color': '#' + theme.badChar}">#</span> <br>
